Scaling keyframes in Graph Editor causes crash #57870

Closed
opened 2018-11-16 14:47:24 +01:00 by William Reynish · 10 comments

System Information
MacOS 10.13.6 (17G65)
AMD Radeon R9 M395X 4096 MB

Blender Version
Broken: Blender 2.80 20963a6a06
Nov 16 2018

When scaling keyframes in the Graph Editor, Blender crashes with Segmentation fault: 11

Exact steps for others to reproduce the error
In this scene, scale the selected keyframes up and down for a bit. It doesn't crash immediately, but after a second or two. Keep scaling up and down until it crashes.

keyframe_graph_crash.blend

Crash log is here:

graph_editor_crash.txt

**System Information** MacOS 10.13.6 (17G65) AMD Radeon R9 M395X 4096 MB **Blender Version** Broken: Blender 2.80 20963a6a06c Nov 16 2018 **When scaling keyframes in the Graph Editor, Blender crashes with Segmentation fault: 11** **Exact steps for others to reproduce the error** In this scene, scale the selected keyframes up and down for a bit. It doesn't crash immediately, but after a second or two. Keep scaling up and down until it crashes. [keyframe_graph_crash.blend](https://archive.blender.org/developer/F5585104/keyframe_graph_crash.blend) Crash log is here: [graph_editor_crash.txt](https://archive.blender.org/developer/F5585151/graph_editor_crash.txt)

Added subscriber: @WilliamReynish

Added subscriber: @WilliamReynish
Sergey Sharybin was assigned by William Reynish 2018-11-21 10:35:04 +01:00

This looks like a depsgraph-relarted crash:

backtrace

0 blender 0x000000010e4b8c87 BLI_system_backtrace + 55
1 blender 0x000000010d9fe10a sig_handle_crash + 362
2 libsystem_platform.dylib 0x00007fff569adf5a _sigtramp + 26
3 ??? 0x00000001191f4a00 0x0 + 4716448256
4 blender 0x000000010e0d2870 BKE_animsys_evaluate_animdata + 528
5 blender 0x000000010e4d273c _ZN3DEGL17deg_task_run_funcEP8TaskPoolPvi + 140
6 blender 0x000000010e4b9b88 BLI_task_pool_work_and_wait + 632
7 blender 0x000000010e4d24a4 _ZN3DEG23deg_evaluate_on_refreshEPNS_9DepsgraphE + 788
8 blender 0x000000010e219848 BKE_scene_graph_update_tagged + 392
9 blender 0x000000010da0210c wm_event_do_depsgraph + 236
10 blender 0x000000010da0219e wm_event_do_refresh_wm_and_depsgraph + 126
11 blender 0x000000010da02794 wm_event_do_notifiers + 1492
12 blender 0x000000010d9feb88 WM_main + 40
13 blender 0x000000010d9faae6 main + 982
14 libdyld.dylib 0x00007fff5669f015 start + 1
15 ??? 0x0000000000000001 0x0 + 1

This looks like a depsgraph-relarted crash: # backtrace 0 blender 0x000000010e4b8c87 BLI_system_backtrace + 55 1 blender 0x000000010d9fe10a sig_handle_crash + 362 2 libsystem_platform.dylib 0x00007fff569adf5a _sigtramp + 26 3 ??? 0x00000001191f4a00 0x0 + 4716448256 4 blender 0x000000010e0d2870 BKE_animsys_evaluate_animdata + 528 5 blender 0x000000010e4d273c _ZN3DEGL17deg_task_run_funcEP8TaskPoolPvi + 140 6 blender 0x000000010e4b9b88 BLI_task_pool_work_and_wait + 632 7 blender 0x000000010e4d24a4 _ZN3DEG23deg_evaluate_on_refreshEPNS_9DepsgraphE + 788 8 blender 0x000000010e219848 BKE_scene_graph_update_tagged + 392 9 blender 0x000000010da0210c wm_event_do_depsgraph + 236 10 blender 0x000000010da0219e wm_event_do_refresh_wm_and_depsgraph + 126 11 blender 0x000000010da02794 wm_event_do_notifiers + 1492 12 blender 0x000000010d9feb88 WM_main + 40 13 blender 0x000000010d9faae6 main + 982 14 libdyld.dylib 0x00007fff5669f015 start + 1 15 ??? 0x0000000000000001 0x0 + 1

Quite sure the root of the issue is same as #57971.

Quite sure the root of the issue is same as #57971.

Added subscriber: @angavrilov

Added subscriber: @angavrilov

Got it to crash here (after a lot of jiggling it - way more than 2 seconds), and it seems like it could be a race condition - the bad pointer in the register that caused the crash is different from what the debugger shows in memory.

1   animsys_evaluate_fcurves                       anim_sys.c        1703 
2   animsys_evaluate_action_ex                     anim_sys.c        1835
3   BKE_animsys_evaluate_animdata                  anim_sys.c        2691
4   BKE_animsys_eval_animdata                      anim_sys.c        2874
...
Got it to crash here (after a lot of jiggling it - way more than 2 seconds), and it seems like it could be a race condition - the bad pointer in the register that caused the crash is different from what the debugger shows in memory. ``` 1 animsys_evaluate_fcurves anim_sys.c 1703 2 animsys_evaluate_action_ex anim_sys.c 1835 3 BKE_animsys_evaluate_animdata anim_sys.c 2691 4 BKE_animsys_eval_animdata anim_sys.c 2874 ... ```
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

backtrace also very similar to #57530

backtrace also very similar to #57530

Adding some debug logging (the end of COW is not there even though it is sort of important too) seems to confirm it's a race condition:

[SCScene :: View Layer]: deg_evaluate_copy_on_write on OBPlane.001 (0x7f94d01fe438)
[SCScene :: View Layer]: deg_evaluate_copy_on_write ENDS on OBPlane.001 (0x7f94d01fe438)
[SCScene :: View Layer]: deg_evaluate_copy_on_write on ACPlane.001Action (0x7f94aac89778)
[SCScene :: View Layer]: BKE_animsys_eval_animdata on OBPlane.001 (0x7f94d01fe438) at time 4.000000
[SCScene :: View Layer]: deg_evaluate_copy_on_write ENDS on ACPlane.001Action (0x7f94aac89778)

Adding some debug logging (the end of COW is not there even though it is sort of important too) seems to confirm it's a race condition: ``` [SCScene :: View Layer]: deg_evaluate_copy_on_write on OBPlane.001 (0x7f94d01fe438) [SCScene :: View Layer]: deg_evaluate_copy_on_write ENDS on OBPlane.001 (0x7f94d01fe438) [SCScene :: View Layer]: deg_evaluate_copy_on_write on ACPlane.001Action (0x7f94aac89778) [SCScene :: View Layer]: BKE_animsys_eval_animdata on OBPlane.001 (0x7f94d01fe438) at time 4.000000 [SCScene :: View Layer]: deg_evaluate_copy_on_write ENDS on ACPlane.001Action (0x7f94aac89778) ```

This issue was referenced by 2a354dd4bd

This issue was referenced by 2a354dd4bde05614f5cd67235edd0463d22d26c4

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#57870
No description provided.